prevent overflow on body

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -44,6 +44,8 @@ body {
   line-height: 1.75;
   font-weight: 400;
   font-family: var(--font-body);
+  overflow-x: hidden;
+  width: 100vw;
 }
 
 
